# ChatHoard

./: .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  build_notes.md  release-notes.md
.github/: FUNDING.yml
.github/workflows/: smokeshow.yml  test.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: crud.py  models.py  utils.py
backend/app/api/routes/: login.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: openai.py  openai_conversations.py
backend/app/models/data/: airports.json
backend/app/tests/models/: openai_conversations.py
docs/: openaichart.md  openaichart.mmd
frontend/: modify-openapi-operationids.js  package-lock.json
frontend/src/components/Admin/: AddUser.tsx  EditUser.tsx
frontend/src/components/Common/: ActionsMenu.tsx  DeleteAlert.tsx  Navbar.tsx  NotFound.tsx  SidebarItems.tsx
frontend/src/components/Items/: AddItem.tsx  EditItem.tsx
frontend/src/components/UserSettings/: Appearance.tsx  ChangePassword.tsx  DeleteAccount.tsx  DeleteConfirmation.tsx  UserInformation.tsx
frontend/src/routes/: login.tsx  recover-password.tsx  reset-password.tsx
frontend/src/routes/_layout/: admin.tsx  index.tsx  items.tsx
